--- a/src/assets/i18n/th-TH.json
+++ b/src/assets/i18n/th-TH.json
@@ -1,6 +1,6 @@
 {
   "menu": {
-    "dashboard": "Dashboard",
+    "my-page": "My Page",
     "design": "Design",
     "design.colors": "Color System",
     "design.icons": "Material Icons",
