feat: adding logout menu

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -76,7 +76,8 @@
     "permissions": "Permissions",
     "permissions.role-switching": "Role Switching",
     "permissions.route-guard": "Route Guard",
-    "permissions.test": "Permission Test"
+    "permissions.test": "Permission Test",
+    "logout": "Logout"
   },
   "validations": {
     "required": "This field is required",
